--- a/scss/header.scss
+++ b/scss/header.scss
@@ -53,6 +53,13 @@ header {
       position: absolute;
       right: 98px;
       padding-top: 5px;
+
+      &.opened {
+        .language__list {
+          opacity: 1;
+          visibility: visible;
+        }
+      }
       &__active {
         font-size: 16px;
         font-weight: 600;
@@ -62,7 +69,7 @@ header {
         // justify-content: center;?
         align-items: center;
         &:after {
-          content: '';
+          content: "";
           margin-top: -4px;
           margin-left: 5px;
           border: solid #2c256b;
@@ -71,6 +78,26 @@ header {
           padding: 3px;
           transform: rotate(45deg);
           -webkit-transform: rotate(45deg);
+        }
+      }
+      &__list {
+        position: absolute;
+        background: #fff;
+        padding: 0px;
+        opacity: 0;
+        visibility: hidden;
+        top: 52px;
+        right: 0;
+        transition: 0.2s;
+        box-shadow: 0 4px 10px -5px #000;
+        li {
+          padding: 15px;
+          transition: 0.2s;
+          cursor: pointer;
+          &:hover,
+          &.active {
+            background: #ccc;
+          }
         }
       }
     }
@@ -130,7 +157,6 @@ header {
         }
 
         a {
-       
           color: #2c256b;
           // position: relative;
           transition: 0.2s;
