--- a/scss/products-page.scss
+++ b/scss/products-page.scss
@@ -59,12 +59,22 @@
         justify-content: center;
         align-items: center;
         transition: 0.1s;
+        position: relative;
         img {
           width: 65px;
           margin: 14px auto 17px;
           display: block;
         }
         a {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          display: block;
+          margin: 0;
+        }
+        span {
           padding: 20px 0;
           width: 100%;
           font-size: 24px;
