--- a/scss/header.scss
+++ b/scss/header.scss
@@ -59,6 +59,11 @@ header {
           opacity: 1;
           visibility: visible;
         }
+        .language__active:after {
+          transform: rotate(-135deg);
+          -webkit-transform: rotate(-135deg);
+          top: 3px;
+        }
       }
       &__active {
         font-size: 16px;
@@ -66,37 +71,46 @@ header {
         cursor: pointer;
         position: relative;
         display: flex;
-        // justify-content: center;?
         align-items: center;
+        color: #2c256b;
         &:after {
+          position: relative;
+          z-index: 10 ;
           content: "";
           margin-top: -4px;
-          margin-left: 5px;
+          margin-left: 6px;
           border: solid #2c256b;
           border-width: 0 1px 1px 0;
           display: inline-block;
           padding: 3px;
           transform: rotate(45deg);
           -webkit-transform: rotate(45deg);
+          transition: 0.1s;
         }
       }
       &__list {
         position: absolute;
         background: #fff;
-        padding: 0px;
+        padding: 0;
         opacity: 0;
         visibility: hidden;
-        top: 52px;
-        right: 0;
-        transition: 0.2s;
-        box-shadow: 0 4px 10px -5px #000;
+        top: -10px;
+        
+        transition: .2s;
+        right:-10px;
+        box-shadow: 0 0px 15px -10px #000;
+        // margin: auto;
+        width: 70px;
         li {
           padding: 15px;
           transition: 0.2s;
           cursor: pointer;
+          color: #2c256b;
+          font-weight: 600;
+          text-align: center;
           &:hover,
           &.active {
-            background: #ccc;
+            background: #efefef;
           }
         }
       }
