--- a/scss/products-import-page.scss
+++ b/scss/products-import-page.scss
@@ -23,6 +23,9 @@
       height: 100%;
       width: 300px;
       top: 0;
+      @media screen and (max-width: 1440px) {
+       display: none;
+      }
     }
     .container {
       padding-top: 71px;
