--- a/scss/about-page.scss
+++ b/scss/about-page.scss
@@ -67,8 +67,33 @@ $border-size: 1px;
     background-position: center;
     padding: 103px 0 84px;
     margin-top: 42px;
+    @media screen and (max-width: 1280px) {
+      padding: 80px 0 70px;
+    }
+    @media screen and (max-width: 1024px) {
+      padding: 70px 0 60px;
+    }
+    @media screen and (max-width: 768px) {
+      margin-top: 0px;
+      padding: 60px 0 50px;
+    }
+    @media screen and (max-width: 360px) {
+      padding: 50px 0 40px;
+    }
     .container {
       padding: 0 136px;
+      @media screen and (max-width: 1280px) {
+        padding: 0 100px;
+      }
+      @media screen and (max-width: 1024px) {
+        padding: 0 80px;
+      }
+      @media screen and (max-width: 768px) {
+        padding: 0 30px;
+      }
+      @media screen and (max-width: 360px) {
+        padding: 0 20px;
+      }
     }
     &__title {
       color: #fff;
@@ -80,6 +105,21 @@ $border-size: 1px;
       right: 0;
       margin-top: -35px;
       letter-spacing: 0.8px;
+      @media screen and (max-width: 1280px) {
+        font-size: 42px;
+        margin-top: -30px;
+      }
+      @media screen and (max-width: 1024px) {
+        font-size: 36px;
+        margin-top: -25px;
+      }
+      @media screen and (max-width: 768px) {
+        font-size: 30px;
+        margin-top: -16px;
+      }
+      @media screen and (max-width: 360px) {
+        font-size: 28px;
+      }
     }
     &__text {
       color: #fff;
@@ -90,6 +130,21 @@ $border-size: 1px;
       position: relative;
       font-style: italic;
       font-size: 18px;
+      @media screen and (max-width: 1280px) {
+        padding: 70px 100px 60px 100px;
+      }
+      @media screen and (max-width: 1024px) {
+        padding: 50px 80px 40px 80px;
+        border-width: 6px;
+      }
+      @media screen and (max-width: 768px) {
+        padding: 30px 30px 30px 30px;
+        font-size: 16px;
+      }
+      @media screen and (max-width: 360px) {
+        padding: 30px 20px 30px 20px;
+        font-size: 15px;
+      }
       &:before {
         content: "";
         left: 0;
@@ -99,6 +154,19 @@ $border-size: 1px;
         top: 0;
         position: absolute;
         background: rgba(255, 255, 255, 0.3);
+        @media screen and (max-width: 1280px) {
+          width: 30%;
+        }
+        @media screen and (max-width: 1024px) {
+          width: 28%;
+          height: 6px;
+        }
+        @media screen and (max-width: 768px) {
+          width: 24%;
+        }
+        @media screen and (max-width: 360px) {
+          width: 22%;
+        }
       }
       &:after {
         content: "";
@@ -109,6 +177,19 @@ $border-size: 1px;
         top: 0;
         position: absolute;
         background: rgba(255, 255, 255, 0.3);
+        @media screen and (max-width: 1280px) {
+          width: 30%;
+        }
+        @media screen and (max-width: 1024px) {
+          width: 28%;
+          height: 6px;
+        }
+        @media screen and (max-width: 768px) {
+          width: 24%;
+        }
+        @media screen and (max-width: 360px) {
+          width: 22%;
+        }
       }
       p + p {
         margin-top: 30px;
@@ -120,6 +201,12 @@ $border-size: 1px;
     padding: 32px 0 99px;
     border-bottom: 4px solid #f4f4fd;
     width: 100%;
+    @media screen and (max-width: 1024px) {
+      padding: 0px 0 50px;
+    }
+    @media screen and (max-width: 768px) {
+      padding: 0px 0 40px;
+    }
     .container {
       display: flex;
       justify-content: center;
@@ -130,6 +217,9 @@ $border-size: 1px;
       position: relative;
       font-size: 0;
       z-index: 1;
+      @media screen and (max-width: 768px) {
+        width: 100%;
+      }
       &:after {
         content: "";
         z-index: -1;
@@ -139,6 +229,10 @@ $border-size: 1px;
         width: calc(100% - 15px);
         height: calc(100% - 8px);
         border: 4px solid #e5e5ed;
+        @media screen and (max-width: 768px) {
+          left: -14px;
+          width: calc(100% + 20px);
+        }
       }
       img {
         display: block;
@@ -146,6 +240,9 @@ $border-size: 1px;
         max-width: 580px;
         height: 304px;
         object-fit: cover;
+        @media screen and (max-width: 768px) {
+          max-width: 100%;
+        }
       }
     }
     &__text {
@@ -153,6 +250,11 @@ $border-size: 1px;
       padding: 0 15px 0 18px;
       line-height: 1.5em;
       margin-top: -5px;
+      @media screen and (max-width: 768px) {
+        width: 100%;
+        margin-top: 40px;
+        padding: 0;
+      }
       p + p {
         margin-top: 24px;
       }
@@ -183,6 +285,18 @@ $border-size: 1px;
         opacity: 0;
         visibility: hidden;
         animation-fill-mode: forwards;
+        @media screen and (max-width: 1280px) {
+        
+        }
+        @media screen and (max-width: 1024px) {
+          width: calc(100% / 3);
+        }
+        @media screen and (max-width: 768px) {
+          width: calc(100% / 2);
+        }
+        @media screen and (max-width: 480px) {
+          width: 100%;
+        }
         &:nth-child(1) {animation-delay: 0s;}
         &:nth-child(2) {animation-delay: 0.2s;}
         &:nth-child(3) {animation-delay: 0.4s;}
@@ -206,6 +320,12 @@ $border-size: 1px;
           line-height: 98px;
           position: relative;
           z-index: 2;
+          @media screen and (max-width: 768px) {
+            font-size: 72px;
+          }
+          @media screen and (max-width: 480px) {
+            font-size: 48px;
+          }
         }
         &--text {
           font-size: 24px;
@@ -214,6 +334,12 @@ $border-size: 1px;
           margin-top: 20px;
           position: relative;
           z-index: 2;
+          @media screen and (max-width: 768px) {
+            font-size: 20px;
+          }
+          @media screen and (max-width: 480px) {
+            font-size: 16px;
+          }
         }
         &:nth-child(2),
         &:nth-child(4),
@@ -278,26 +404,44 @@ $border-size: 1px;
 
   .title {
     text-align: center;
-    font-size: 38px;
     font-weight: 600;
     text-transform: uppercase;
     color: #2e2d2d;
     width: 100%;
+    font-size: 48px;
+    @media screen and (max-width: 1280px) {
+      font-size: 42px;
+    }
+    @media screen and (max-width: 1024px) {
+      font-size: 36px;
+    }
+    @media screen and (max-width: 768px) {
+      font-size: 32px;
+    }
+    @media screen and (max-width: 360px) {
+      font-size: 28px;
+    }
     &-about {
       margin: 72px 0 34px;
-      font-size: 48px;
       font-weight: 300;
       letter-spacing: 1px;
+      @media screen and (max-width: 1024px) {
+        margin: 30px 0 25px;
+      }
     }
     &-visia {
       margin: 40px 0 28px 0px;
-      font-size: 48px;
       font-weight: 300;
+      @media screen and (max-width: 1024px) {
+        margin: 30px 0 20px;
+      }
     }
     &-values {
       margin: 65px 0 41px 0px;
-      font-size: 48px;
       font-weight: 300;
+      @media screen and (max-width: 1024px) {
+        margin: 30px 0 25px;
+      }
     }
   }
 
@@ -350,6 +494,9 @@ $border-size: 1px;
       @media screen and (max-width: 1280px) {
         height: auto;
       }
+      @media screen and (max-width: 768px) { 
+        margin-bottom: 30px;
+      }
       &:nth-child(odd) {
         margin-left: 50px;
         padding-left: 129px;
@@ -357,9 +504,21 @@ $border-size: 1px;
                     100% 0,
                     100% 100%,
                     0 100%;
+        @media screen and (max-width: 1024px) {
+          padding-left: 110px;
+        }
+        @media screen and (max-width: 768px) { 
+          padding-left: 30px;
+          padding-right: 30px;
+          margin-left: 0;
+          padding-bottom: 20px;
+        }
 
         .about-list__item--image {
           left: -63px;
+          @media screen and (max-width: 768px) { 
+            left: 0;
+          }
         }
       }
       &:nth-child(even) {
@@ -369,14 +528,30 @@ $border-size: 1px;
                     0% 0%,
                     0% 100%,
                     100% 100%;
+        @media screen and (max-width: 1024px) {
+          padding-right: 110px;
+        }
+        @media screen and (max-width: 768px) { 
+          padding-left: 30px;
+          padding-right: 30px;
+          margin-right: 0px;
+          padding-bottom: 20px;
+        }
         .about-list__item--image {
           right: -63px;
+          @media screen and (max-width: 768px) { 
+            right: 0;
+            order: -1;
+          }
         }
       }
       &:nth-child(1){
         .about-list__item--image {
           img {
             width: 30px;
+            @media screen and (max-width: 768px) {
+              width: 25px;
+            }
           }
         }
       }
@@ -391,12 +566,20 @@ $border-size: 1px;
         .about-list__item--image {
           img {
             width: 76px;
+            @media screen and (max-width: 768px) {
+              width: 60px;
+            }
           }
         }
       }
       &--title {
         font-weight: 600;
         color: #2e2d2d;
+        @media screen and (max-width: 768px) {
+          width: 100%;
+          text-align: center;
+          margin-top: 20px;
+        }
       }
       &--image {
         position: absolute;
@@ -412,8 +595,20 @@ $border-size: 1px;
         display: flex;
         justify-content: center;
         align-items: center;
+        @media screen and (max-width: 768px) {
+          width: 130px;
+          height: 130px;
+          position: relative;
+          left: auto;
+          right: auto;
+          // display: block;
+          // margin: auto;
+        }
         img {
           width: 65px;
+          @media screen and (max-width: 768px) {
+            width: 50px;
+          }
         }
         @media screen and (max-width: 1280px) {
           top: 0;
