--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,6 +1,9 @@
 header {
   position: relative;
   z-index: 10;
+  @media screen and (max-width: 1024px) {
+    display: none;
+}
   &:before {
     content: "";
     height: 4px;
