--- a/scss/contacts-page.scss
+++ b/scss/contacts-page.scss
@@ -60,6 +60,17 @@
     margin-top: 49px;
   }
 
+  .application-form {
+    @media screen and (max-width: 1024px) {
+      width: 350px;
+    }
+    @media screen and (max-width: 768px) {
+      width: 100%;
+      max-width: 429px;
+      // margin: auto;
+    }
+  }
+
   .wrapper {
     display: flex;
     flex-wrap: wrap;
@@ -70,6 +81,19 @@
     font-size: 24px;
     margin: 75px 0 33px;
     text-transform: uppercase;
+    @media screen and (max-width: 1280px) {
+   
+    }
+    @media screen and (max-width: 1024px) {
+      margin: 45px 0 25px;
+    }
+    @media screen and (max-width: 768px) {
+      font-size: 22px;
+    }
+    @media screen and (max-width: 360px) {
+      margin: 35px 0 20px;
+      font-size: 20px;
+    }
     &:after {
       content: "";
       height: 4px;
@@ -83,6 +107,15 @@
   .map {
     width: calc(100% - 449px);
     border: 1px solid #f4f4fd;
+    @media screen and (max-width: 1024px) {
+      width: calc(100% - 370px);
+
+    }
+    @media screen and (max-width: 768px) {
+      width: 100%;
+      height: 400px;
+      margin-top: 40px;
+    }
   }
 
   .contacts-info {
@@ -93,6 +126,9 @@
       margin-bottom: 31px;
       display: flex;
       align-items: center;
+      @media screen and (max-width: 480px) {
+        font-size: 14px;
+      }
       &:nth-child(2) {
         img {
           width: 18px;
@@ -100,6 +136,9 @@
         }
       }
       &:nth-child(3) {
+        @media screen and (max-width: 480px) {
+          flex-wrap: wrap;
+        }
         img {
           width: 19px;
         }
@@ -111,6 +150,11 @@
       .phone-number {
         cursor: pointer;
         margin-left: 4px;
+        @media screen and (max-width: 480px) {
+          // display: block;
+          width: 100%;
+          margin: 10px 0 0 30px;
+        }
       }
     }
   }
