--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,7 +26,7 @@ body {
   margin: auto;
   padding: 0 40px;
 
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 768px) {
     padding: 0 20px;
   }
 }
@@ -43,6 +43,9 @@ main {
   align-self: flex-start;
   text-align: left;
   background-position: center !important;
+  @media screen and (max-width: 768px) {
+    padding: 30px 0 30px 0!important;
+  }
   .container {
   }
   .breadcrumbs {
@@ -71,16 +74,16 @@ main {
     margin: 7px 0 0px;
     position: relative;
     @media screen and (max-width: 1280px) {
-      font-size: 36px;
+      font-size: 40px;
     }
     @media screen and (max-width: 1024px) {
-      font-size: 32px;
+      font-size: 34px;
     }
     @media screen and (max-width: 768px) {
-      font-size: 28px;
+      font-size: 30px;
     }
     @media screen and (max-width: 360px) {
-      font-size: 24px;
+      font-size: 28px;
     }
     &:after {
       content: "";
