--- a/scss/not-found-page.scss
+++ b/scss/not-found-page.scss
@@ -16,18 +16,55 @@
     font-weight: 600;
     letter-spacing: -3.3px;
     // width: 100%;
+
+    @media screen and (max-width: 1280px) {
+      font-size: 270px;
+    }
+    @media screen and (max-width: 1024px) {
+      font-size: 220px;
+    }
+    @media screen and (max-width: 768px) {
+      font-size: 180px;
+    }
+    @media screen and (max-width: 360px) {
+      font-size: 140px;
+    }
   }
   .descr {
     font-size: 36px;
     color: #383838;
     // width: 100%;
     margin-top: 30px;
+    @media screen and (max-width: 1280px) {
+      font-size: 32px;
+    }
+    @media screen and (max-width: 1024px) {
+      font-size: 30px;
+    }
+    @media screen and (max-width: 768px) {
+      font-size: 28px;
+    }
+    @media screen and (max-width: 360px) {
+      font-size: 26px;
+    }
   }
   .link {
     margin-top: 30px;
     font-size: 24px;
     color: #383838;
     // width: 100%;
+    @media screen and (max-width: 1280px) {
+      font-size: 28px;
+    }
+    @media screen and (max-width: 1024px) {
+      font-size: 24px;
+    }
+    @media screen and (max-width: 768px) {
+      font-size: 22px;
+    }
+    @media screen and (max-width: 360px) {
+      font-size: 20px;
+    }
     a {
       text-decoration: underline;
       color: #db272f;
