--- a/scss/products-page.scss
+++ b/scss/products-page.scss
@@ -20,6 +20,18 @@
     text-transform: uppercase;
     color: #2e2d2d;
     width: 100%;
+    @media screen and (max-width: 1280px) {
+      font-size: 42px;
+    }
+    @media screen and (max-width: 1024px) {
+      font-size: 36px;
+    }
+    @media screen and (max-width: 768px) {
+      font-size: 32px;
+    }
+    @media screen and (max-width: 360px) {
+      font-size: 28px;
+    }
   }
 
   .tm-list {
@@ -37,6 +49,15 @@
       height: 247px;
       color: #fff;
       overflow: hidden;
+      @media screen and (max-width: 1024px) {
+        width: calc(100%/3);
+      }
+      @media screen and (max-width: 768px) {
+        width: calc(100%/2);
+      }
+      @media screen and (max-width: 360px) {
+        width: calc(100%/1);
+      }
       img {
         width: 100%;
         height: 100%;
@@ -82,6 +103,12 @@
           border-top: 1px solid #6d6986;
           border-bottom: 1px solid #6d6986;
           text-align: center;
+          @media screen and (max-width: 768px) {
+            font-size: 20px;
+          }
+          @media screen and (max-width: 360px) {
+            font-size: 18px;
+          }
         }
         &:hover {
           // a {
@@ -93,6 +120,16 @@
         background: url(../img/ownblue1.png) no-repeat;
         width: 34%;
         padding: 0 60px;
+        @media screen and (max-width: 1024px) {
+          width: calc(100%/3);
+          padding: 0 20px;
+        }
+        @media screen and (max-width: 768px) {
+          width: calc(100%/2);
+        }
+        @media screen and (max-width: 360px) {
+          width: calc(100%/1);
+        }
       }
       &:nth-child(4) {
         background: url(../img/ownblue2.png) no-repeat;
@@ -104,11 +141,31 @@
         background: url(../img/ownblue4.png) no-repeat;
         width: 34%;
         padding: 0 60px;
+        @media screen and (max-width: 1024px) {
+           width: calc(100%/3);
+           padding: 0 20px;
+         }
+         @media screen and (max-width: 768px) {
+          width: calc(100%/2);
+        }
+        @media screen and (max-width: 360px) {
+          width: calc(100%/1);
+        }
       }
       &:nth-child(10) {
         background: url(../img/ownblue5.png) no-repeat;
         width: 34%;
         padding: 0 60px;
+        @media screen and (max-width: 1024px) {
+           width: calc(100%/3);
+           padding: 0 20px;
+         }
+         @media screen and (max-width: 768px) {
+          width: calc(100%/2);
+        }
+        @media screen and (max-width: 360px) {
+          width: calc(100%/1);
+        }
       }
       &:nth-child(12) {
         background: url(../img/ownblue6.png) no-repeat;
