--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -4,12 +4,22 @@
   justify-content: space-between;
   padding-top: 0;
   height: calc(100% - 44px);
+  overflow: hidden;
   .header-image {
     width: 54%;
     background: url(../img/main-header-bg.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     height: calc(100% - 150px - 44px);
+    @media screen and (max-width: 1024px) {
+      width: 40%;
+    }
+    @media screen and (max-width: 600px) {
+      width: 20%;
+    }
+    @media screen and (max-width: 480px) {
+      display: none;
+    }
   }
 
   .header-description {
@@ -19,8 +29,20 @@
     height: calc(100% - 150px - 44px);
     display: flex;
     align-items: center;
+    @media screen and (max-width: 1024px) {
+      width: 60%;
+    }
+    @media screen and (max-width: 600px) {
+      width: 80%;
+    }
+    @media screen and (max-width: 480px) {
+      width: 100%;
+    }
     .container {
       padding: 100px 54px 0;
+      @media screen and (max-width: 1024px) {
+        padding: 100px 30px 0;
+      }
     }
     &__title {
       font-size: 72px;
@@ -28,6 +50,21 @@
       margin-top: 14px;
       letter-spacing: 0.1px;
       line-height: 1em;
+      @media screen and (max-width: 1600px) {
+        font-size: 68px;
+      }
+      @media screen and (max-width: 1280px) {
+        font-size: 54px;
+      }
+      @media screen and (max-width: 1024px) {
+        font-size: 48px;
+      }
+      @media screen and (max-width: 768px) {
+        font-size: 42px;
+      }
+      @media screen and (max-width: 360px) {
+        font-size: 38px;
+      }
       span {
         font-size: 46px;
         letter-spacing: 1px;
@@ -35,6 +72,23 @@
         margin-top: 9px;
         display: block;
         font-weight: 300;
+
+        @media screen and (max-width: 1600px) {
+          line-height: 1.2em;
+        }
+        @media screen and (max-width: 1280px) {
+          font-size: 40px;
+        }
+        @media screen and (max-width: 1024px) {
+          font-size: 32px;
+        }
+        @media screen and (max-width: 768px) {
+          font-size: 28px;
+          line-height: 1.1em;
+        }
+        @media screen and (max-width: 360px) {
+          font-size: 24px;
+        }
         &:after {
           content: "";
           height: 3px;
@@ -50,6 +104,21 @@
       display: flex;
       align-items: flex-end;
       letter-spacing: 0.4px;
+      @media screen and (max-width: 1600px) {
+        font-size: 32px;
+      }
+      @media screen and (max-width: 1280px) {
+        font-size: 30px;
+      }
+      @media screen and (max-width: 1024px) {
+        font-size: 28px;
+      }
+      @media screen and (max-width: 768px) {
+        font-size: 24px;
+      }
+      @media screen and (max-width: 360px) {
+        font-size: 22px;
+      }
       img {
         margin-right: 2px;
         width: 36px;
@@ -57,12 +126,20 @@
         display: block;
         letter-spacing: 0.4px;
         margin-bottom: 6px;
+        @media screen and (max-width: 768px) {
+          width: 27px;
+          height: 78px;
+          margin-right: 10px;
+        }
       }
     }
     &__text {
       font-size: 16px;
       width: 70%;
       line-height: 1.5em;
+      @media screen and (max-width: 1024px) {
+        font-size: 14px;
+      }
     }
     .btn {
       margin-top: 40px;
@@ -82,6 +159,13 @@
     justify-content: center;
     flex-direction: column;
     align-content: center;
+    @media screen and (max-width: 1024px) {
+      width: 44px;
+    }
+    @media screen and (max-width: 768px) {
+      // height: 100%;
+      width: 40px;
+    }
     & > div {
       
     }
@@ -93,6 +177,14 @@
       justify-content: center;
       align-items: center;
       margin-bottom: 16px;
+      @media screen and (max-width: 1024px) {
+        width: 44px;
+        height: 44px;
+      }
+      @media screen and (max-width: 768px) {
+        width: 40px;
+        height: 40px;
+      }
       img {
         transition: 0.1s;
       }
