--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -1,8 +1,12 @@
 .modal {
     &[data-modal-id="modal-adolescence"] {
         .modal-body {
-            width: 580px;
+            width: 100%;
+            max-width: 580px;
             height: 360px;
+            @media screen and (max-width: 480px) {
+                height: 320px;
+            }
         }
         form {
             height: 100%;
@@ -24,6 +28,12 @@
             font-size: 38px;
             text-align: center;
             text-transform: uppercase;
+            @media screen and (max-width: 1024px) {
+                font-size: 30px;
+            }
+            @media screen and (max-width: 480px) {
+                font-size: 26px;
+            }
         }
         .modal-language {
             display: flex;
@@ -55,18 +65,35 @@
 
     &[data-modal-id="modal-application"] {
         .modal-body {
-            width: 675px;
+            width: 100%;
+            max-width: 675px;
             height: 640px;
+            @media screen and (max-width: 1024px) {
+                height: 610px;
+            }
+            @media screen and (max-width: 480px) {
+                height: 560px;
+            }
         }
 
         .application-form {
             width: 100%;
             padding: 50px 45px 20px 45px;
+            @media screen and (max-width: 1024px) {
+                padding: 40px 35px 20px 35px;
+            }
+            @media screen and (max-width: 480px) {
+                padding: 50px 20px 20px 20px;
+            }
             input, textarea{
                 margin-bottom: 25px;
                 border-color: #e8e8e8;
                 font-size: 18px;
                 padding: 15px 14px 17px 20px;
+                @media screen and (max-width: 480px) {
+                    margin-bottom: 15px;
+                    font-size: 16px;
+                }
             }
             textarea {
                 padding: 25px 14px 17px 20px;
@@ -79,6 +106,17 @@
             text-align: center;
             font-weight: 600;
             margin-bottom: 55px;
+            @media screen and (max-width: 1024px) {
+                font-size: 30px;
+                margin-bottom: 45px;
+            }
+            @media screen and (max-width: 480px) {
+                font-size: 26px;
+                margin-bottom: 25px;
+            }
+            @media screen and (max-width: 480px) {
+                font-size: 22px;
+            }
         }
         .file-upload {
             position: relative;
@@ -87,6 +125,9 @@
             display: inline-flex;
             align-items: center;
             font-size: 18px;
+            @media screen and (max-width: 480px) {
+                font-size: 16px;
+            }
             span {
                 text-decoration: underline;
             }
