--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -43,6 +43,9 @@
       @media screen and (max-width: 1024px) {
         padding: 100px 30px 0;
       }
+      @media screen and (max-width: 480px) {
+        padding: 60px 20px 0;
+      }
     }
     &__title {
       font-size: 72px;
@@ -62,8 +65,11 @@
       @media screen and (max-width: 768px) {
         font-size: 42px;
       }
+      @media screen and (max-width: 480px) {
+        text-align: center;
+      }
       @media screen and (max-width: 360px) {
-        font-size: 38px;
+        font-size: 34px;
       }
       span {
         font-size: 46px;
@@ -86,8 +92,12 @@
           font-size: 28px;
           line-height: 1.1em;
         }
-        @media screen and (max-width: 360px) {
+        @media screen and (max-width: 480px) {
+          text-align: center;
           font-size: 24px;
+        }
+        @media screen and (max-width: 360px) {
+          font-size: 22px;
         }
         &:after {
           content: "";
@@ -96,6 +106,9 @@
           background: #db272f;
           display: block;
           margin: 11px 0px 25px 0;
+          @media screen and (max-width: 480px) {
+            margin: 10px auto;
+          }
         }
       }
     }
@@ -116,8 +129,16 @@
       @media screen and (max-width: 768px) {
         font-size: 24px;
       }
+      @media screen and (max-width: 480px) {
+        text-align: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        span {
+          width: 100%;
+        }
+      }
       @media screen and (max-width: 360px) {
-        font-size: 22px;
+        font-size: 20px;
       }
       img {
         margin-right: 2px;
@@ -140,9 +161,18 @@
       @media screen and (max-width: 1024px) {
         font-size: 14px;
       }
+      @media screen and (max-width: 480px) {
+        width: 100%;
+        text-align: center;
+      }
     }
     .btn {
       margin-top: 40px;
+      @media screen and (max-width: 480px) {
+        margin: 20px auto 10px;
+        padding: 13px 80px 12px 25px;
+        font-size: 14px;
+      }
     }
   }
   .socials {
@@ -165,6 +195,9 @@
     @media screen and (max-width: 768px) {
       // height: 100%;
       width: 40px;
+    }
+    @media screen and (max-width: 480px) {
+      display: none;
     }
     & > div {
       
