--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -38,6 +38,7 @@ footer {
                 display: block;
                 text-align: center;
                 min-width: 100%;
+                margin-left: 0px;
             }
         }
     }
