--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -37,6 +37,7 @@
     }
     @media screen and (max-width: 480px) {
       width: 100%;
+      height: calc(100% - 126px - 44px);
     }
     .container {
       padding: 100px 54px 0;
@@ -291,6 +292,9 @@
     width: 100%;
     // height: 200px;
     padding: 35px 40px 16px 40px;
+    @media screen and (max-width: 480px) {
+      padding: 25px 40px 15px 40px;
+    }
     .slick-prev,
     .slick-next {
       border: none;
