--- a/scss/style.scss
+++ b/scss/style.scss
@@ -113,36 +113,81 @@ main {
   padding: 15px 0;
   align-self: flex-end;
   @media screen and (max-width: 1024px) {
-    display: none;
+    // display: none;
   }
   .container {
     max-width: calc(1355px);
     display: flex;
     justify-content: space-between;
+    @media screen and (max-width: 1024px) {
+      padding-left: 0;
+    }
+    @media screen and (max-width: 768px) {
+      padding: 10px;
+    }
   }
 
   &__list {
     display: flex;
     justify-content: space-between;
+    @media screen and (max-width: 1280px) {
+      margin-right: 30px;
+    }
+    @media screen and (max-width: 768px) {
+      display: none;
+    }
+    // @media screen and (max-width: 480px) {
+    //   margin-right: 0px;
+    // }
     .line {
       border-left: 1px solid #9895ba;
       margin: 0 66px 0 60px;
       height: 77px;
       align-self: center;
+      @media screen and (max-width: 1280px) {
+        margin: 0 30px;
+      }
+      // @media screen and (max-width: 768px) {
+      //   display: none;
+      // }
     }
     .logo {
       width: 218px;
       display: block;
       margin-right: 80px;
+      @media screen and (max-width: 1600px) {
+        margin-right: 40px;
+      }
+      @media screen and (max-width: 1280px) {
+        width: 180px;
+      }
+
+      @media screen and (max-width: 1024px) {
+        width: 100px;
+      }
+
+      // @media screen and (max-width: 480px) {
+      //   width: 50px;
+      // }
+
       img {
         width: 180px;
         display: block;
+        @media screen and (max-width: 1024px) {
+          width: 126px;
+        }
+        @media screen and (max-width: 768px) {
+          width: 90px;
+        }
       }
     }
   }
   ul {
     padding-top: 26px;
     align-self: flex-start;
+    @media screen and (max-width: 768px) {
+      display: none;
+    }
     li {
       text-align: left;
       margin-bottom: 11px;
@@ -151,6 +196,9 @@ main {
         color: #77777b;
         font-weight: 400;
         letter-spacing: 0.4px;
+        @media screen and (max-width: 1024px) {
+          font-size: 14px;
+        }
         &:hover {
           text-decoration: underline;
         }
@@ -166,22 +214,57 @@ main {
     // justify-content: space-between;
     align-items: flex-start;
     padding-top: 19px;
+    @media screen and (max-width: 1600px) {
+      min-width: 460px;
+    }
+    @media screen and (max-width: 768px) {
+      padding-top: 0;
+      min-width: initial;
+      justify-content: center;
+      width: 100%;
+    }
     &-title {
       width: 100%;
       letter-spacing: 0.1px;
+      @media screen and (max-width: 1024px) {
+       
+      }
+      @media screen and (max-width: 768px) {
+        margin-bottom: 10px;
+         text-align: center;
+      }
+    }
+    .btn {
+      @media screen and (max-width: 768px) {
+        margin: 5px 20px
+      }
     }
     input {
       width: 266px;
+      min-width: 166px;
       background: none;
       border-radius: 20px;
       border: 1px solid #b3b1cd;
       padding: 12px 14px 10px 20px;
       outline: none;
       font-size: 14px;
-      margin-right: 10px;
       font-family: "Raleway regular", sans-serif;
       margin-right: 23px;
-
+      @media screen and (max-width: 1280px) {
+        width: 100%;
+        max-width: 266px;
+      }
+      @media screen and (max-width: 1024px) {
+        max-width: 200px;
+        margin-right: 15px;
+      }
+      @media screen and (max-width: 768px) {
+        margin: 5px 20px;
+        max-width: 166px;
+      }
+      @media screen and (max-width: 480px) {
+        max-width: 166px;
+      }
       &::-webkit-input-placeholder {
         /* Chrome/Opera/Safari */
         color: #a9a8ad;
