--- a/scss/style.scss
+++ b/scss/style.scss
@@ -238,6 +238,10 @@ main {
       @media screen and (max-width: 768px) {
         margin: 5px 20px
       }
+      @media screen and (max-width: 360px) {
+        max-width: 100%;
+        width: 100%;
+      }
     }
     input {
       width: 266px;
@@ -260,10 +264,13 @@ main {
       }
       @media screen and (max-width: 768px) {
         margin: 5px 20px;
-        max-width: 166px;
+        max-width: 200px;
       }
       @media screen and (max-width: 480px) {
         max-width: 166px;
+      }
+      @media screen and (max-width: 360px) {
+        max-width: 100%;
       }
       &::-webkit-input-placeholder {
         /* Chrome/Opera/Safari */
