--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -20,6 +20,9 @@
     @media screen and (max-width: 480px) {
       display: none;
     }
+    @media screen and (max-height: 640px) {
+      height: calc(100% - 120px - 44px);
+    }
   }
 
   .header-description {
@@ -29,6 +32,7 @@
     height: calc(100% - 150px - 44px);
     display: flex;
     align-items: center;
+    overflow: hidden;
     @media screen and (max-width: 1024px) {
       width: 60%;
     }
@@ -38,6 +42,9 @@
     @media screen and (max-width: 480px) {
       width: 100%;
       height: calc(100% - 126px - 44px);
+    }
+    @media screen and (max-height: 640px) {
+      height: calc(100% - 120px - 44px);
     }
     .container {
       padding: 100px 54px 0;
@@ -169,6 +176,9 @@
         width: 100%;
         text-align: center;
       }
+      @media screen and (max-height: 580px) {
+        display: none;
+      }
     }
     .btn {
       margin-top: 40px;
@@ -295,6 +305,9 @@
     padding: 35px 40px 16px 40px;
     @media screen and (max-width: 480px) {
       padding: 25px 40px 15px 40px;
+    }
+    @media screen and (max-height: 640px) {
+      padding: 15px 40px 0px 40px;
     }
     .slick-prev,
     .slick-next {
