--- a/scss/not-found-page.scss
+++ b/scss/not-found-page.scss
@@ -26,6 +26,9 @@
     @media screen and (max-width: 768px) {
       font-size: 180px;
     }
+    @media screen and (max-width: 480px) {
+      font-size: 120px;
+    }
     @media screen and (max-width: 360px) {
       font-size: 100px;
     }
