--- a/scss/style.scss
+++ b/scss/style.scss
@@ -147,6 +147,9 @@ main {
       @media screen and (max-width: 1280px) {
         margin: 0 30px;
       }
+      @media screen and (max-width: 1024px) {
+        margin: 0 20px;
+      }
       // @media screen and (max-width: 768px) {
       //   display: none;
       // }
@@ -215,7 +218,7 @@ main {
     align-items: flex-start;
     padding-top: 19px;
     @media screen and (max-width: 1600px) {
-      min-width: 460px;
+      // min-width: 460px;
     }
     @media screen and (max-width: 768px) {
       padding-top: 0;
@@ -256,18 +259,17 @@ main {
       margin-right: 23px;
       @media screen and (max-width: 1280px) {
         width: 100%;
-        max-width: 266px;
+        max-width: 240px;
       }
       @media screen and (max-width: 1024px) {
-        max-width: 200px;
+        max-width: 166px;
         margin-right: 15px;
       }
       @media screen and (max-width: 768px) {
         margin: 5px 20px;
-        max-width: 200px;
       }
       @media screen and (max-width: 480px) {
-        max-width: 166px;
+        // max-width: 166px;
       }
       @media screen and (max-width: 360px) {
         max-width: 100%;
