--- a/scss/not-found-page.scss
+++ b/scss/not-found-page.scss
@@ -9,6 +9,9 @@
     margin: initial;
     width: 100%;
     padding-top: 30px;
+    @media screen and( max-width: 480px) and (max-height: 600px) {
+      padding-top: 50px;
+    }
   }
   .title {
     color: #2d2a6a;
@@ -32,6 +35,9 @@
     @media screen and (max-width: 360px) {
       font-size: 100px;
     }
+    @media screen and( max-width: 480px) and (max-height: 600px) {
+      font-size: 80px;
+    }
   }
   .descr {
     font-size: 36px;
@@ -50,6 +56,9 @@
     @media screen and (max-width: 360px) {
       font-size: 22px;
     }
+    @media screen and( max-width: 480px) and (max-height: 600px) {
+      font-size: 18px;
+    }
   }
   .link {
     margin-top: 30px;
@@ -67,6 +76,9 @@
     }
     @media screen and (max-width: 360px) {
       font-size: 18px;
+    }
+    @media screen and( max-width: 480px) and (max-height: 600px) {
+      font-size: 14px;
     }
     a {
       text-decoration: underline;
