--- a/scss/style.scss
+++ b/scss/style.scss
@@ -115,6 +115,9 @@ main {
   @media screen and (max-width: 1024px) {
     // display: none;
   }
+  @media screen and( max-width: 480px) and (max-height: 600px) {
+    padding: 8px 0;
+  }
   .container {
     max-width: calc(1355px);
     display: flex;
@@ -235,6 +238,9 @@ main {
       @media screen and (max-width: 768px) {
         margin-bottom: 10px;
          text-align: center;
+      }
+      @media screen and( max-width: 480px) and (max-height: 600px) {
+        font-size: 14px;
       }
     }
     .btn {
