--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,6 +34,12 @@ body {
 main {
   min-height: calc(100% - 44px);
   padding-top: 123px;
+  @media screen and (max-width: 1024px) {
+    padding-top: 80px;
+  }
+  @media screen and (max-width: 768px) {
+    padding-top: 60px;
+  }
 }
 
 .top-panel {
@@ -310,9 +316,9 @@ main {
     padding: 17px 14px 17px 20px;
     outline: none;
     font-size: 16px;
-    margin-right: 10px;
+    // margin-right: 10px;
     font-family: "Raleway regular", sans-serif;
-    margin-right: 23px;
+    // margin-right: 23px;
     margin-bottom: 19px;
     resize: none;
     &::-webkit-input-placeholder {
