--- a/scss/not-found-page.scss
+++ b/scss/not-found-page.scss
@@ -58,6 +58,7 @@
     }
     @media screen and( max-width: 480px) and (max-height: 600px) {
       font-size: 18px;
+      margin-top: 15px;
     }
   }
   .link {
