--- a/scss/products-page.scss
+++ b/scss/products-page.scss
@@ -9,6 +9,20 @@
   }
   .bottom-panel {
     margin-top: 82px;
+    @media screen and (max-width: 1024px) {
+      margin-top: 40px;
+    }
+  }
+
+  .products__link {
+    display: flex;
+    justify-content: center;
+    margin: 35px auto 0;
+    .btn {
+      width: 230px;
+      display: inline-block;
+      padding: 15px 14px 13px;
+    }
   }
 
   .title {
@@ -37,13 +51,6 @@
   .tm-list {
     display: flex;
     flex-wrap: wrap;
-    a {
-      margin: 35px auto 0;
-    }
-    .btn {
-      width: 230px;
-      padding: 15px 14px 13px;
-    }
     &__item {
       width: calc(22%);
       height: 247px;
@@ -51,12 +58,48 @@
       overflow: hidden;
       @media screen and (max-width: 1024px) {
         width: calc(100%/3);
+        &:nth-child(1) {order: 1;}
+        &:nth-child(2) {order: 2;}
+        &:nth-child(3) {order: 3;}
+        &:nth-child(4) {order: 4;}
+        &:nth-child(5) {order: 6;}
+        &:nth-child(6) {order: 5;}
+        &:nth-child(7) {order: 8;}
+        &:nth-child(8) {order: 7;}
+        &:nth-child(9) {order: 9;}
+        &:nth-child(10) {order: 10;}
+        &:nth-child(11) {order: 11;}
+        &:nth-child(12) {order: 12;}
       }
       @media screen and (max-width: 768px) {
         width: calc(100%/2);
+        &:nth-child(1) {order: 1;}
+        &:nth-child(2) {order: 2;}
+        &:nth-child(3) {order: 4;}
+        &:nth-child(4) {order: 3;}
+        &:nth-child(5) {order: 6;}
+        &:nth-child(6) {order: 5;}
+        &:nth-child(7) {order: 7;}
+        &:nth-child(8) {order: 8;}
+        &:nth-child(9) {order: 9;}
+        &:nth-child(10) {order: 10;}
+        &:nth-child(11) {order: 12;}
+        &:nth-child(12) {order: 11;}
       }
       @media screen and (max-width: 360px) {
         width: calc(100%/1);
+        &:nth-child(1) {order: 1;}
+        &:nth-child(2) {order: 2;}
+        &:nth-child(3) {order: 3;}
+        &:nth-child(4) {order: 4;}
+        &:nth-child(5) {order: 6;}
+        &:nth-child(6) {order: 5;}
+        &:nth-child(7) {order: 8;}
+        &:nth-child(8) {order: 7;}
+        &:nth-child(9) {order: 9;}
+        &:nth-child(10) {order: 10;}
+        &:nth-child(11) {order: 11;}
+        &:nth-child(12) {order: 12;}
       }
       img {
         width: 100%;
